# url-shortener

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yaml
migration/src/: m20220101_000001_create_table.rs
src/: authenthication.rs  config.rs  kvs.rs  main.rs  requests.rs  responses.rs  service.rs
src/models/: mod.rs  prelude.rs  url_redirects.rs
